services/my-telecom-portal/src/main/resources/static/my-telecom-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-telecom-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rewrite
  namespace: default
spec:
  tls:
  - hosts:
    - mytelecom.foo.com
    secretName: my-telecom-ingress
  rules:
  - host: mytelecom.foo.com
    http:
      paths:
      - path: /ui(/|$)(.*)
        backend:
          serviceName: my-portal-ui
          servicePort: 4200
      - path: /portal(/|$)(.*)
        backend:
          serviceName: my-telecom-portal
          servicePort: 8181
